# RSS-Reader

./: .clang-format  CMakeLists.txt  ClientMain.cpp  EnableTesting.cmake  LICENSE  ServerMain.cpp  index.html
.github/workflows/: cmake-single-platform.yml
cmake/: boost.cmake  googletest.cmake  openssl.cmake  spdlog.cmake
docs/uml/: ConnectionHandlerStateDiagram.puml  HttpServerSequenceDiagram.puml
include/: INonCopyable.hpp
include/http/: ConnectionType.hpp  Constants.hpp  HttpClient.hpp  HttpConnection.hpp  HttpConnectionFactory.hpp  HttpConnectionHandler.hpp  HttpConnectionState.hpp  HttpHelpers.hpp  HttpRequest.hpp  HttpRequestMethod.hpp  HttpResponse.hpp  HttpServer.hpp  IHttpClient.hpp  IHttpConnection.hpp  Types.hpp
include/network/: AddrInfoBuilder.hpp  IClosable.hpp  IConnection.hpp  INetworkUtils.hpp  ISysCallsWrapper.hpp  NetworkHelpers.hpp  NetworkUtils.hpp  PollEvents.hpp  ProtocolFamily.hpp  Socket.hpp  SocketType.hpp  StatusCode.hpp  SysCallsWrapper.hpp  TcpConnection.hpp  TcpSocket.hpp  Types.hpp
include/utils/: AddrInfoBuilder.hpp  INetworkUtils.hpp  ISysCallsWrapper.hpp  Log.hpp  LoggerImpl.hpp  NetworkUtils.hpp  SysCallsWrapper.hpp
include/utils/log/: Log.hpp  LoggerImpl.hpp
include/utils/network/: AddrInfoBuilder.hpp  INetworkUtils.hpp  ISysCallsWrapper.hpp  NetworkUtils.hpp  ProtocolFamily.hpp  Socket.hpp  SocketType.hpp  StatusCode.hpp  SysCallsWrapper.hpp  TcpSocket.hpp  Types.hpp
src/: ClientMain.cpp  ServerMain.cpp  main.cpp  rss-reader.cpp
src/http/: ConnectionType.cpp  HttpClient.cpp  HttpConnection.cpp  HttpConnectionFactory.cpp  HttpConnectionHandler.cpp  HttpHelpers.cpp  HttpRequest.cpp  HttpRequestMethod.cpp  HttpResponse.cpp  HttpServer.cpp
src/network/: AddrInfoBuilder.cpp  NetworkHelpers.cpp  NetworkUtils.cpp  Socket.cpp  StatusCode.cpp  SysCallsWrapper.cpp  TcpConnection.cpp
src/utils/: AddrInfoBuilder.cpp  NetworkUtils.cpp  SysCallsWrapper.cpp
src/utils/network/: AddrInfoBuilder.cpp  NetworkUtils.cpp  Socket.cpp  StatusCode.cpp  SysCallsWrapper.cpp
tests/: small-200.html
tests/include/: MockHttpClient.hpp  MockNetworkUtils.hpp  MockSysCallsWrapper.hpp  TestHelpers.hpp
tests/src/: HttpClientTest.cpp  HttpConnectionFactoryTest.cpp  HttpHelpersTest.cpp  HttpResponseTest.cpp  NetworkUtilsTest.cpp
